cms pages added

--- a/angular/tpl/blocks/desktop/footer.html
+++ b/angular/tpl/blocks/desktop/footer.html
@@ -9,31 +9,31 @@
                     <div class="col-lg-2 col-md-2 col-lg-offset-1 col-md-offset-1">
                         <h5>Earn and Learn</h5>
                         <ul class="footer-list">
-                            <li><a href="#">Open a shop</a></li>
-                            <li><a href="#">Become a partner</a></li>
-                            <li><a href="#">Affiliation program</a></li>
-                            <li><a href="#">Bonus Credit</a></li>
+                            <li><a ui-sref="app.openshop">Open a shop</a></li>
+                            <li><a ui-sref="app.becomepartner">Become a partner</a></li>
+                            <li><a ui-sref="app.affiliationprogram">Affiliation program</a></li>
+                            <li><a ui-sref="app.bonuscredit">Bonus Credit</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-2">
                         <h5>Resources</h5>
                         <ul class="footer-list">
-                            <li><a href="#">Licenses and Legal</a></li>
-                            <li><a href="#">Discussions and Forums</a></li>
-                            <li><a href="#"> Collecons Centre</a></li>
-                            <li><a href="#">Help Center</a></li>
-                            <li><a href="#">Collaboraon Service</a></li>
-                            <li><a href="#">Site Maps</a></li>
+                            <li><a ui-sref="app.licenceandlegal">Licenses and Legal</a></li>
+                            <li><a ui-sref="app.discussionsandforums">Discussions and Forums</a></li>
+                            <li><a ui-sref="app.collectioncenter"> Collecons Centre</a></li>
+                            <li><a ui-sref="app.helpcenter">Help Center</a></li>
+                            <li><a ui-sref="app.collaboraonservice">Collaboraon Service</a></li>
+                            <li><a ui-sref="app.sitemap">Site Maps</a></li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-2">
                         <h5>The Company</h5>
                         <ul class="footer-list">
-                            <li><a href="#">Brand</a></li>
-                            <li><a href="#">Terms and Condions</a></li>
-                            <li><a href="#">Cookie Policy</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Careers</a></li>                                
+                            <li><a ui-sref="app.brand">Brand</a></li>
+                            <li><a ui-sref="app.termsandconditions">Terms and Condions</a></li>
+                            <li><a ui-sref="app.cookypolicy">Cookie Policy</a></li>
+                            <li><a ui-sref="app.privacypolicy">Privacy Policy</a></li>
+                            <li><a ui-sref="app.careers">Careers</a></li>                                
                         </ul>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        © 2018 Collabro. All Rights Reserved.
+                        © {{thisyear}} Collabro. All Rights Reserved.
                     </div>
                     <div class="col-lg-4 col-md-4 right text-right follow">
                         Follow Us 
