--- a/angular/tpl/desktop/cms/openshop.html
+++ b/angular/tpl/desktop/cms/openshop.html
@@ -1,65 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css"
-        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!-- Custom css -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-
-    <title>Collabro</title>
-</head>
-
-<body>
-
-    <!-- Home header -->
-    <header class="home-header">
-        <nav class="navbar">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+<div ng-controller="HIWCtrl">
+    <div class="info-section">
+        <div class="info-left">
+            <h1>How can we help you?</h1>
+            <div class="left-list">
+                <h3>Earn and Learn</h3>
+                <ul>
+                    <li><a>Open a Shop</a></li>
+                    <li><a>Become a Partner</a></li>
+                    <li><a>Affililation Program</a></li>
+                    <li><a>Bonus Credit</a></li>
+                </ul>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <a class="logo" href="#">
-                    <img src="../assets/img/home-logo.png" />
-                </a>
-                <div class="row flex-center">
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                        <div class="search-top">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search keyword" />
-                                <button type="button" class="btn transparent-btn"><i class="fa fa-search" ></i></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 text-right flex-center-space-even">
-                        <ul class="top-nav">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Benefits</a></li>                    
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-2 flex-center-end">
-                        <ul class="top-nav wd-auto">
-                            <li><a class="btn btn-border-white" href="#">Signup</a></li>
-                            <li><a class="btn btn-border-white" href="#">Login</a></li>
-                        </ul>
-                    </div>
-                </div>
-
+            <div class="left-list">
+                <h3>Resources</h3>
+                <ul>
+                    <li><a>Licenses and Legal</a></li>
+                    <li><a>Discussions and Forums</a></li>
+                    <li><a>Collections Centre</a></li>
+                    <li><a>Help Center</a></li>
+                    <li><a>Collaboration Service</a></li>
+                    <li><a>Site Maps</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
-
-    <!-- Info page -->
-    <!-- Center content Start -->
+            <div class="left-list">
+                <h3>The Company</h3>
+                <ul>
+                    <li><a>Brand</a></li>
+                    <li><a>Terms and Conditions</a></li>
+                    <li><a>Cookie Policy</a></li>
+                    <li><a>Privacy Policy</a></li>
+                    <li><a>Careers</a></li>                            
+                </ul>
+            </div>
+        </div>
         <div class="info-right">
             <div class="inner-title"><h1>Tripartite Agreement Template</h1></div>
             <div class="special-content">
@@ -241,75 +214,5 @@
                 </div>
             </div>
         </div>
-        <!-- Center content End -->
-
-    <!-- Footer content -->
-    <div class="footer">
-        <div class="footer-top">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <img src="../assets/img/logo.png" />
-                        <p>Collabro is a decentralised platform for entrepreneurs to collaborate, engage, find resources and do business. Built with AI-powered tripartite collaboration system technology to connect business owners and end-users. This platform will benefit those who are seeking resources to hire, buy, sell or offer services.</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-lg-offset-1 col-md-offset-1">
-                        <h5>Earn and Learn</h5>
-                        <ul class="footer-list">
-                            <li><a href="#">Open a shop</a></li>
-                            <li><a href="#">Become a partner</a></li>
-                            <li><a href="#">Affiliation program</a></li>
-                            <li><a href="#">Bonus Credit</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-2">
-                        <h5>Resources</h5>
-                        <ul class="footer-list">
-                            <li><a href="#">Licenses and Legal</a></li>
-                            <li><a href="#">Discussions and Forums</a></li>
-                            <li><a href="#"> Collecons Centre</a></li>
-                            <li><a href="#">Help Center</a></li>
-                            <li><a href="#">Collaboraon Service</a></li>
-                            <li><a href="#">Site Maps</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-2 col-md-2">
-                        <h5>The Company</h5>
-                        <ul class="footer-list">
-                            <li><a href="#">Brand</a></li>
-                            <li><a href="#">Terms and Condions</a></li>
-                            <li><a href="#">Cookie Policy</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Careers</a></li>                                
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="footer-bottom">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6">
-                        © 2018 Collabro. All Rights Reserved.
-                    </div>
-                    <div class="col-lg-4 col-md-4 right text-right follow">
-                        Follow Us 
-                        <i class="fa fa-camera"></i>
-                        <i class="fa fa-facebook-square"></i> 
-                        <i class="fa fa-send"></i>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
     </div>
-
-    <!-- Jquery -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
+</div>
