cms pages updated

--- a/angular/tpl/desktop/cms/howitworks.html
+++ b/angular/tpl/desktop/cms/howitworks.html
@@ -1,15 +1,12 @@
-<div ng-controller="HIWCtrl">
-     <div class="wthree-dot" id="notificationtop" ng-if="!formLoading">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2 col-sm-2 col-lg-2 nopadding leftSidebar" data-ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-                <div class="col-md-10 col-sm-10 col-lg-10 nopadding min800">
-                    <div class="col-md-12 col-sm-12 col-lg-12 mypadding">
-                        <span ng-bind-html="hiw.content"></span>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 col-lg-2 nopadding rightSidebar" data-ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
-            </div>
+<div ng-controller="CMS1Ctrl">
+    <div class="info-section">
+        <div ng-include="'tpl/blocks/'+ currentdevice +'/infoleft.html'" ng-if="!isLogged">
         </div>
+        <div ng-include="'tpl/blocks/desktop/leftmenu.html'" ng-if="isLogged">
+        </div>
+        <!-- Center content Start -->
+        <div ng-bind-html="pageData.content">
+        </div>
+        <!-- Center content End -->
     </div>
 </div>
