Title changes updated

--- a/angular/index.html
+++ b/angular/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Collabro</title>
+    <title ng-bind="title +' - Collabro'"></title>
     <base href="/project/Collabro/angular/" />
     <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
