--- a/angular/tpl/mobile/noauth/home.html
+++ b/angular/tpl/mobile/noauth/home.html
@@ -3,7 +3,7 @@
 <div class="HomeCtrl" ng-controller="HomeCtrl">
     <div class="col-md-12 text-center">
         <h3 class='headertitle'>Welcome to collabro</h3>
-        <img src="img/mobilelogo.png">
+        <img src="img/mobile/mobilelogo.png">
     </div>
     <div class="col-md-12 text-center bottom50" ui-sref="app.mobilemain">
         <div class="getstart"> GET STARTED </div>
