mobile app update

--- a/angular/tpl/mobile/noauth/home.html
+++ b/angular/tpl/mobile/noauth/home.html
@@ -1,12 +1,12 @@
 <!-- Mobile home1 start  -->
 
-<div class="HomeCtrl" ng-controller="HomeCtrl">
+<div class="HomeCtrl main-home" ng-controller="HomeCtrl">
     <div class="col-md-12 text-center">
-        <h3 class='headertitle'>Welcome to collabro</h3>
+        <h2 class="white">Welcome to collabro</h2>
         <img src="img/mobile/mobilelogo.png">
     </div>
-    <div class="col-md-12 text-center bottom50" ui-sref="app.mobilemain">
-        <div class="getstart"> GET STARTED </div>
+    <div class="col-md-12 text-center" ui-sref="app.mobilemain">
     </div>
-    <div class="col-md-12 footercont text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
+    <div class="btn default-btn block-btn home-footer-btn"> GET STARTED </div>
+    <div class="home-footer text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
