--- a/angular/tpl/mobile/mobilemain.html
+++ b/angular/tpl/mobile/mobilemain.html
@@ -1,29 +1,50 @@
-<div class="HomeCtrl" ng-controller="HomeCtrl" id="hometop">
+<div class="HomeCtrl mobile-main" ng-controller="HomeCtrl" id="hometop">
     <div class="col-md-12 text-center">
-        <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span class="cspan">  inspire.</span></h3>
+        <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span
+                class="cspan"> inspire.</span></h3>
     </div>
-    <div class="w3ls-subscribe text-center">
-        <h4 class="text-left">SIGN IN</h4>
+    <div class="login-modal">
+        <h3 class="black">SIGN IN</h3>
         <form name="loginForm" novalidate ng-submit="login(loginForm)">
-            <span class="details"> Email Address <span ng-if="loginerrors.message" class="text-danger">{{loginerrors.message[0]}}</span> <span ng-messages="loginForm.email.$error" role="alert"><span class="text-danger" ng-message="required">Email Required</span>
-            <span
-                class="text-danger" ng-message="email">Not valid email.</span>
+            <div class="form-group">
+                <label class="control-label">E-mail address</label>
+                <input type="email" name="email" class="form-control" placeholder="email@address.com" ng-model="userData.email" required ng-change="authtextChanged()">
+                <span ng-if="(loginForm.$valid)&&(loginerrors.errormsg)" class="error error-text">{{loginerrors.errormsg}}</span>
+                <span ng-messages="loginForm.email.$error" role="alert">
+                    <span class="error error-text" ng-if="!loginerrors.errormsg && loginForm.email.$error" ng-message="required">Email Required</span>
+                    <span class="error error-text" ng-if="!loginerrors.errormsg && loginForm.email.$error" ng-message="email">Not valid email.</span>
                 </span>
-                </span><input type="email" name="email" placeholder="Email" ng-model="userData.email" required>
-                <span class="details">Password <span ng-messages="loginForm.password.$error" role="alert"><span class="text-danger" ng-message="required">Password Required</span><span class="text-danger" ng-message="minlength">Atleast 8 characters long.</span></span>
-                </span><input type="password" name="password" placeholder="Password" required ng-model="userData.password" minlength="8">
-                <div id="remember" style=""><input type="checkbox" ng-model="userData.rememberme" name="remember_me"  ng-true-value="1" ng-false-value="0"> Remember me</div>
-            <div id="forgot"><a ui-sref="app.forgotpassword">Forgot Password?</a>
             </div>
-                <button id="sign-in" class="btn margintop sign-in" type="submit" button-spinner="loginloading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="loading">SIGN IN</button>
+            <div class="form-group">
+                <label class="control-label">Password</label>
+                <input type="{{pwtype}}" name="password" class="form-control" placeholder="password" ng-model="userData.password" minlength="8" required ng-change="authtextChanged()">
+                <span class="eye-icon" ng-click="showhidepassword()">
+                    <i class="fa" ng-class="pwtype == 'password' ? 'fa-eye':'fa-eye-slash'"></i>
+                </span>
+                <span ng-messages="loginForm.password.$error" role="alert">
+                    <span class="error error-text" ng-message="required">Password Required</span>
+                <span class="error error-text" ng-message="minlength">Atleast 8 characters long.</span>
+                </span>
+            </div>
+            <div class="form-group flex-center-space mt-15">
+                <input class="magic-checkbox" type="checkbox" id="remember" ng-model="userData.rememberme" name="remember_me" ng-true-value="1" ng-false-value="0">
+                <label class="text" for="remember">Remember Me</label>
+                <a class="forgot-password right" ng-click="changeauthTab('forgotpw')">Forgot Password?</a>
+            </div>
+            <div class="form-group mt-15">
+                <button type="submit" ng-disabled="loginLoading||authloading||!loginForm.$valid" class="btn success-btn block-btn"> Sign in <i class="fa fa-spinner fa-pulse fa-fw" ng-if="loginLoading"></i></button>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn blue-btn block-btn" ng-disabled="facebookloading||authloading" ng-click="facebooklogin();">Sign in with Facebook <i class="fa fa-spinner fa-pulse fa-fw" ng-if="facebookloading"></i></button>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn danger-btn block-btn" ng-disabled="googleloading||authloading" ng-click="googleLogin();">Sign in with Google <i class="fa fa-spinner fa-pulse fa-fw" ng-if="googleloading"></i></button>
+            </div>
+            <div class="form-group mt-15">
+                <button type="button" class="btn silver-btn block-btn" ng-disabled="authloading" ng-click="changeauthTab('signup')">Create an Account</button>
+            </div>
+            <p class="text-center">Create an account if you do not have an account yet</p>
         </form>
     </div>
-    <div class="col-md-12 text-center buttoncontainer">
-        <button id="facebook" class="btn sign-in" type="submit" button-spinner="facebookloading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="loading" ng-click="facebooklogin();">SIGN IN WITH FACEBOOK</button>
 
-        <button id="google" class="btn sign-in marginbottom" type="submit" button-spinner="googleloading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="loading" ng-click="googleLogin();">SIGN IN WITH GOOGLE</button>
-
-        <button id="create" class="btn sign-in" type="submit" ng-disabled="loading" ui-sref="app.signup">CREATE ACCOUNT for FREE</button>
-    </div>
-    <div class="col-md-12 footercont text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
