mobile header fixed

--- a/angular/tpl/blocks/mobile/footer.html
+++ b/angular/tpl/blocks/mobile/footer.html
@@ -1,4 +1,4 @@
-<div class="mobile-footer footerbackg" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup'">
+<div class="mobile-footer footerbackg" ng-if="stateurl!='app.home' && stateurl!='app.mobilemain' && stateurl!='app.signup'">
    <ul>
       <li><a ui-sref="app.todos"><img src="./img/mobile/todo.png" /></a></li>
       <li><a ui-sref="app.wishlist"><img src="./img/mobile/favourite.png" /></a></li>
