--- a/angular/tpl/blocks/mobile/header.html
+++ b/angular/tpl/blocks/mobile/header.html
@@ -1,4 +1,4 @@
-<div class="mobile-head" id="wrap" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup' && stateurl!='forgotpassword'">
+<div class="mobile-head" id="wrap" ng-if="stateurl!='app.home' && stateurl!='app.mobilemain' && stateurl!='app.signup' && stateurl!='app.forgotpassword'">
     <div class="menu-bar">
         <button type="button" class="topmenu" ng-click="openAside('left', true)">
             <span class="fa fa-bars"></span>
