new pages added

--- a/angular/tpl/mobile/noauth/home.html
+++ b/angular/tpl/mobile/noauth/home.html
@@ -5,8 +5,8 @@
         <h2 class="white">Welcome to collabro</h2>
         <img src="img/mobile/mobilelogo.png">
     </div>
-    <div class="col-md-12 text-center" ui-sref="app.mobilemain">
+    <div class="col-md-12 text-center" >
     </div>
-    <div class="btn default-btn block-btn home-footer-btn"> GET STARTED </div>
+    <div class="btn default-btn block-btn home-footer-btn" ui-sref="app.mobilemain"> GET STARTED </div>
     <div class="home-footer text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
