--- a/angular/tpl/mobile/friends.html
+++ b/angular/tpl/mobile/friends.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper" ng-controller="FriendsCtrl">
     <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
-        <div class="row" id="Friends">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" ng-if="friends.total > 0"  id="Friends">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -39,7 +39,7 @@
                 <div class="card friend-card">
                     <div class="card-content">
                         <div class="content-left">
-                            <h4 class="title-default" ui-sref="app.viewuser({'id':friend.id})">{{friend.username}}</h4>
+                            <h4 class="title-default" ui-sref="app.viewuser({'id':friend.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">{{friend.username}}</h4>
                             <span class="sub-head">{{friend.profession}}</span>
                         </div>
                         <div class="content-right">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="card-info price-border">
-                        <div class="card-left" ui-sref="app.viewuser({'id':friend.id})">
+                        <div class="card-left" ui-sref="app.viewuser({'id':friend.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                             <img ng-src="{{IMGURL}}{{friend.avatar}}" />
                         </div>
                         <div class="card-right">
@@ -81,13 +81,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="friends.total  ==  0">
+                <div class="wd-100 text-center white-bg p-15">
+                    <h4>No records Found</h4>
+                </div>
+            </div>
         </div>
         <div class="row mb-30">
             <div class="col-lg-12 col-md-12 col-sm-12" ng-if="friends.last_page > 1 && !formLoading">
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pagination-ctrl" pagination-id="friends-pagination"></dir-pagination-controls>
             </div>
         </div>
-        <div class="row"  id="Others">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar bg-gray">
                     <div class="topbar-left">
@@ -96,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class="row mt-15">
+        <div class="row mt-15" id="Others">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
@@ -117,7 +122,7 @@
                 <div class="card friend-card">
                     <div class="card-content">
                         <div class="content-left">
-                            <h4 class="title-default" ui-sref="app.viewuser({'id':people.id})">{{people.username}}</h4>
+                            <h4 class="title-default" ui-sref="app.viewuser({'id':people.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">{{people.username}}</h4>
                             <span class="sub-head">{{people.profession}}</span>
                         </div>
                         <div class="content-right">
@@ -125,7 +130,7 @@
                         </div>
                     </div>
                     <div class="card-info price-border">
-                        <div class="card-left" ui-sref="app.viewuser({'id':people.id})">
+                        <div class="card-left" ui-sref="app.viewuser({'id':people.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                             <img ng-src="{{IMGURL}}{{people.avatar}}" />
                         </div>
                         <div class="card-right">
