--- a/angular/tpl/mobile/signup.html
+++ b/angular/tpl/mobile/signup.html
@@ -2,6 +2,7 @@
     <div class="col-md-12 text-right topclass">
         <img src="img/mobilelognew.png">
     </div>
+    <!-- Signup -->
     <div class="w3ls-subscribe registerForm">
         <h1>SIGNUP</h1>
         <form>
