--- a/angular/tpl/mobile/signup.html
+++ b/angular/tpl/mobile/signup.html
@@ -35,7 +35,7 @@
             <div class="form-group mt-15">
                 <input type="button" disabled class="btn success-btn block-btn" value="Proceed" />
             </div>
-            <p class="font-s text-center">Create an account to buy and sell in our community! If you already have an account <a class="default" href="#">Login in here</a></p>
+            <p class="font-s text-center">Create an account to buy and sell in our community! If you already have an account <a class="default" ui-sref="app.mobilemain">Login in here</a></p>
         </form>
     </div>
     <div class="footercont font-s text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
