--- a/angular/index.html
+++ b/angular/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title ng-bind="title +' - Collabro'"></title>
-    <!-- <base href="/project/Collabro/angular/" /> -->
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/" />
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="libs/datepicker/angular-datepicker.css" type="text/css" />
   
 </head>
-    <body ng-controller="AppCtrl" ng-class="{'cookie-active' : showheader}">
+    <body ng-controller="AppCtrl" ng-class="{'cookie-active' : showheader && !isMobile}">
     <div class="app" ui-view></div>
     <!-- Skitter Slider -->
     <!-- // Main Css Files -->
