--- a/angular/tpl/mobile/forgotpassword.html
+++ b/angular/tpl/mobile/forgotpassword.html
@@ -1,20 +1,26 @@
-<div class="HomeCtrl forgetpassword" ng-controller="HomeCtrl" id="hometop">
+<div class="HomeCtrl forgotpassword" ng-controller="HomeCtrl" id="hometop">
    <div class="col-md-12 text-center">
-      <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span class="cspan">  inspire.</span></h3>
+       <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span
+               class="cspan"> inspire.</span></h3>
    </div>
-   <div class="w3ls-subscribe registerForm">
-      <h4>FORGOT PASSWORD</h4>
-      <form name="forgotForm" novalidate ng-submit="forgotpassword(forgotForm)">
-         <span class="details">Email Address <span ng-if="forgoterrors.errormsg" class="text-danger">{{forgoterrors.errormsg}}</span>
-            <span ng-if="forgoterrors.successmsg" class="text-success">{{forgoterrors.successmsg}}</span>
-            <span ng-if="forgoterrors.email" class="text-danger">{{forgoterrors.email[0]}}</span><span ng-messages="forgotForm.email.$error" role="alert"><span class="text-danger" ng-message="required">Email Required</span><span class="text-danger" ng-message="email">Not valid email.</span> </span>
-         </span><input type="email" name="email" placeholder="Email" ng-model="forgotModel.email" required>
-
-         <button id="forgot-pw" class="btn sign-in" type="submit" button-spinner="forgotloading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="loading||!forgotForm.$valid">PROCEED</button>
-            <button class="btn sign-in extra-btn-fpw cursor" type="button" ng-disabled="loading"ui-sref="app.signup">CREATE ACCOUNT</button>
-            <button class="btn sign-in extra-btn-fpw cursor" type="button" ng-disabled="loading" ui-sref="app.mobilemain">GO TO SIGN IN</button>
-        
-      </form>
+   <div class="wd-100 mt-15">
+      <h3 class="black">FORGOT PASSWORD</h3>
+       <form>
+           <div class="form-group">
+               <label class="control-label">E-mail address</label>
+               <input type="text" class="form-control" placeholder="email@address.com" />
+               <span class="error error-text">Invalid format</span>
+           </div>
+           <div class="form-group mt-15">
+               <input type="button" disabled class="btn success-btn block-btn" value="Proceed" />
+           </div>
+           <div class="form-group">
+               <input type="button" class="btn silver-btn block-btn" value="Create an Account" />
+           </div>
+           <div class="form-group">
+               <input type="button" class="btn silver-btn block-btn" value="Go to Sign in" />
+           </div>
+       </form>
    </div>
    <div class="col-md-12 footercont text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
