--- a/angular/tpl/mobile/usermain.html
+++ b/angular/tpl/mobile/usermain.html
@@ -1,9 +1,9 @@
 <div class="content-wrapper" ng-controller="UserMainCtrl">
-    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-    <div class="center-content content">
+    <!-- <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div> -->
+    <div class="center-content mobile-center-content content">
         <!-- app top -->
         <div class="container-top">
-            <div class="container-left">
+            <div class="container-left full-banner">
                 <slick ng-if="!formLoading" init-onload="true" data="sliders" settings="coverslickConfig" dots="false" infinite="true">
                     <div class="width100 sliderframer" ng-repeat="(key,image) in sliders">
                         <div class="imgcontainer" background-image="{{IMGURL}}{{image.file}}" ng-if="image.filetype == 1"></div>
@@ -14,7 +14,7 @@
                     </div>
                 </slick>
             </div>
-            <div class="container-right">
+            <!-- <div class="container-right">
                 <div class="accordion-head">WHAT’S HAPPENING TODAY!</div>
                 <div class="no-feed" ng-if="feeds.length == 0"><span>Currently No feeds</span>
                 </div>
@@ -55,14 +55,14 @@
                         </accordion>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- app container -->
         <div class="content-container">
             
             <div class="row mt-15">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <ul class="search-tab">
+                    <ul class="search-tab mobile-search-tab">
                         <li ng-click="setactivetab('all')"><a ng-class="{'active':activetab=='all'}">All</a></li>
                         <li ng-click="setactivetab('service')"><a ng-class="{'active':activetab=='service'}">Services</a></li>
                         <li ng-click="setactivetab('shop')"><a ng-class="{'active':activetab=='shop'}">Products</a></li>
@@ -84,7 +84,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mt-15 mb-15">
+                        <div class="topbar mob-topbar result mt-15 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">SERVICES</span>
                             </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mt-5 mb-15">
+                        <div class="topbar mob-topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">PRODUCTS</span>
                             </div>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mt-5 mb-15">
+                        <div class="topbar mob-topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">RENTAL</span>
                             </div>
@@ -208,7 +208,7 @@
                 <div class="row">
 
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mt-5 mb-15">
+                        <div class="topbar mob-topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext">EVENT</span>
                             </div>
@@ -251,7 +251,7 @@
             <div ng-if="activetab != 'all'">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <div class="topbar result mt-5 mb-15">
+                        <div class="topbar mob-topbar result mt-5 mb-15">
                             <div class="topbar-left">
                                 <span class="lefttext text-uppercase">{{activetab == 'shop' ? 'products':activetab + 's'}}</span>
                             </div>
@@ -297,5 +297,5 @@
             </div>
         </div>
     </div>
-    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <!-- <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div> -->
 </div>
