--- a/angular/tpl/mobile/usermain.html
+++ b/angular/tpl/mobile/usermain.html
@@ -288,7 +288,7 @@
                                 </div>
                             </div>
                         
-                            <div class="col-lg-12 col-md-12 text-center" ng-if="typeproductdata.total > 0 && !formLoading">
+                            <div class="col-lg-12 col-md-12 col-xs-12 text-center" ng-if="typeproductdata.total > 0 && !formLoading">
                                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
                             </div>
                         </div>
