mobile ui update

--- a/angular/tpl/blocks/mobile/sidemenu.html
+++ b/angular/tpl/blocks/mobile/sidemenu.html
@@ -83,5 +83,6 @@
        <li><a ui-sref="app.howitworks" ng-class="{'primary bold':stateurl=='app.howitworks'}"><i class="fa fa-lightbulb-o"></i> <span>HOW IT WORKS</span></a></li>
        <li><a ui-sref="app.rewardsandbenefits" ng-class="{'primary bold':stateurl=='app.rewardsandbenefits'}"><i class="fa fa-trophy"></i> <span>REWARDS & BENEFITS</span></a></li>
        <li><a ng-class="{'primary':stateurl=='app.settings'}"><i class="fa fa-cogs"></i> <span>SETINGS</span></a></li>
+       <li><a ng-click="logout();" ng-class="{'primary':stateurl=='app.settings'}"><i class="fa fa-sign-out"></i> <span>LOGOUT</span></a></li>
    </ul>
 </div>
