--- a/angular/tpl/mobile/noauth/home.html
+++ b/angular/tpl/mobile/noauth/home.html
@@ -3,7 +3,7 @@
 <div class="HomeCtrl main-home" ng-controller="HomeCtrl">
     <div class="col-md-12 text-center">
         <h2 class="white">Welcome to collabro</h2>
-        <img src="img/mobile/mobilelogo.png">
+        <img class="mt-30" src="img/mobile/mobilelogo.png">
     </div>
     <div class="col-md-12 text-center" >
     </div>
