--- a/angular/tpl/blocks/mobile/sidemenu.html
+++ b/angular/tpl/blocks/mobile/sidemenu.html
@@ -52,7 +52,7 @@
     <button class="btn btn-primary" ng-click="ok($event)">OK</button>
     <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
 </div> -->
-<div class="sidebar-modal">
+<div class="sidebar-modal" ng-click="closeAside()">
 
    <div class="left-sidebar mob-left-menu">
       <div class="sidebar-card">
