collabro issues fixed

--- a/angular/tpl/mobile/forgotpassword.html
+++ b/angular/tpl/mobile/forgotpassword.html
@@ -1,26 +1,27 @@
 <div class="HomeCtrl forgotpassword" ng-controller="HomeCtrl" id="hometop">
-   <div class="col-md-12 text-center">
-       <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span
-               class="cspan"> inspire.</span></h3>
+ <div class="col-md-12 text-center">
+   <h3 class='headertitlenew'><span class="cspan"> create. </span> • <span class="cspan"> engage. </span> •<span
+     class="cspan"> inspire.</span></h3>
    </div>
    <div class="wd-100 mt-15">
-      <h3 class="black">FORGOT PASSWORD</h3>
-       <form>
-           <div class="form-group">
-               <label class="control-label">E-mail address</label>
-               <input type="text" class="form-control" placeholder="email@address.com" />
-               <span class="error error-text">Invalid format</span>
-           </div>
-           <div class="form-group mt-15">
-               <input type="button" disabled class="btn success-btn block-btn" value="Proceed" />
-           </div>
-           <div class="form-group">
-               <input type="button" class="btn silver-btn block-btn" value="Create an Account" />
-           </div>
-           <div class="form-group">
-               <input type="button" class="btn silver-btn block-btn" value="Go to Sign in" />
-           </div>
-       </form>
+    <h3 class="black">FORGOT PASSWORD</h3>
+    <form name="forgotForm" novalidate ng-submit="forgotpassword(forgotForm)">
+     <div class="form-group">
+       <label class="control-label">E-mail address</label>
+       <input type="email" name="email" class="form-control" placeholder="email@address.com" ng-model="forgotModel.email" required ng-change="authtextChanged()"/>
+       <span ng-if="forgoterrors.errormsg && forgotForm.email.$error" class="error error-text">{{forgoterrors.errormsg}}</span>
+       <span ng-if="forgoterrors.successmsg && forgotForm.email.$error" class="success success-text">{{forgoterrors.successmsg}}</span>
+     </div>
+     <div class="form-group mt-15">
+      <button type="submit" ng-disabled="forgotLoading||!forgotForm.$valid" class="btn success-btn block-btn"> Proceed <i class="fa fa-spinner fa-pulse fa-fw" ng-if="forgotLoading"></i></button>
+    </div>
+    <div class="form-group">
+     <input type="button" class="btn silver-btn block-btn" value="Create an Account" ui-sref="app.signup"/>
    </div>
-   <div class="col-md-12 footercont text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
+   <div class="form-group">
+     <input type="button" class="btn silver-btn block-btn" value="Go to Sign in" ui-sref="app.mobilemain"/>
+   </div>
+ </form>
+</div>
+<div class="col-md-12 footercont text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
