--- a/angular/tpl/mobile/signup.html
+++ b/angular/tpl/mobile/signup.html
@@ -5,38 +5,54 @@
     <!-- Signup -->
     <div class="w3ls-subscribe registerForm">
         <h1>SIGNUP</h1>
-        <form>
+        <form name="registerForm" novalidate ng-submit="register(registerForm)">
             <div class="form-group">
                 <label class="control-label">Username</label>
-                <input type="text" class="form-control" placeholder="username" />
+                <input type="text" class="form-control" name="username" placeholder="User Name" ng-model="registerModel.username" required>
+                
+                <span ng-if="registererrors.usernameerror" class="error error-text">{{registererrors.usernameerror}}</span>
+                <span ng-messages="registerForm.username.$error" role="alert">
+                    <span class="error error-text" ng-message="required">Username Required</span>
+                    <span class="error error-text" ng-message="minlength">Atleast 4 characters long.</span>
+                </span>
             </div>
             <div class="form-group">
                 <label class="control-label">E-mail address</label>
-                <input type="text" class="form-control" placeholder="email@address.com" />
-                <span class="error error-text">Invalid format</span>
+                <input type="email" name="email" class="form-control" placeholder="email@address.com" ng-model="registerModel.email" required>
+                <span ng-if="registererrors.emailerror" class="error error-text">{{registererrors.emailerror}}</span>
+                    <span ng-messages="registerForm.email.$error" role="alert">
+                        <span class="error error-text" ng-message="required">Email Required</span>
+                        <span class="error error-text" ng-message="email">Not valid email.</span>
+                    </span>
+                </span>
             </div>
             <div class="form-group">
                 <label class="control-label">Password</label>
-                <input type="password" class="form-control" placeholder="password" />
+                <input type="password" class="form-control" name="password" placeholder="********" ng-model="registerModel.password" required minlength="8" />
                 <span class="eye-icon">
                     <i class="fa fa-eye"></i>
                 </span>
-                <span class="error error-text">Invalid format</span>
+                <span class="details">Password 
+                    <span ng-messages="registerForm.password.$error" role="alert">
+                        <span class="error error-text" ng-message="required">Password Required</span>
+                        <span class="error error-text" ng-message="minlength">Atleast 8 characters long.</span>
+                    </span>
+                </span>
             </div>
             <div class="form-group custom-dropdown">
                 <label class="control-label">Who you are?</label>
                 <div class="custom-arrow">
-                    <select class="select-form-control">
-                        <option value="option">Individual</option>
-                        <option value="option">Company</option>
-                    </select>
-                </div>
+                   <select class="select-form-control" name="iscompany" ng-model="registerModel.iscompany" required>
+                    <option value='0'>Individual</option>
+                    <option value='1'>Company</option>
+                </select>
             </div>
-            <div class="form-group mt-15">
-                <input type="button" disabled class="btn success-btn block-btn" value="Proceed" />
-            </div>
-            <p class="font-s text-center">Create an account to buy and sell in our community! If you already have an account <a class="default" ui-sref="app.mobilemain">Login in here</a></p>
-        </form>
-    </div>
-    <div class="footercont font-s text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
+        </div>
+        <div class="form-group mt-15">
+            <button class="btn success-btn block-btn" type="submit" button-spinner="registerloading" spinning-icon="fa fa-circle-o-notch fa-spin" ng-disabled="loading">Proceed</button>
+        </div>
+        <p class="font-s text-center">Create an account to buy and sell in our community! If you already have an account <a class="default" ui-sref="app.mobilemain">Login in here</a></p>
+    </form>
+</div>
+<div class="footercont font-s text-center"> By joining, you agree to Collabro’s <span class="terms" ng-click="showAModal()">Terms of Service</span></div>
 </div>
