mobile issue fix, signup, login, topbar.

--- a/angular/tpl/mobile/signup.html
+++ b/angular/tpl/mobile/signup.html
@@ -32,7 +32,7 @@
                 <span class="eye-icon">
                     <i class="fa fa-eye"></i>
                 </span>
-                <span class="details">Password 
+                <span class="details">
                     <span ng-messages="registerForm.password.$error" role="alert">
                         <span class="error error-text" ng-message="required">Password Required</span>
                         <span class="error error-text" ng-message="minlength">Atleast 8 characters long.</span>
