--- a/angular/tpl/blocks/modals/otpModal.html
+++ b/angular/tpl/blocks/modals/otpModal.html
@@ -2,10 +2,10 @@
 <div class="custom-modal" ng-controller="OTPModalCtrl">
    <div class="custom-modal-title">
       <div class="row flex-center">
-          <div class="col-lg-10 col-md-10">
+          <div class="col-lg-10 col-md-10 col-xs-2">
               <h3 class="ng-binding">Verify Your OTP Here!</h3>
           </div>
-          <div class="col-lg-2 col-md-2 text-right">
+          <div class="col-lg-2 col-md-2 col-xs-2 text-right">
               <a ng-click="closeModal()"><img src="../assets/img/close.png"></a>
           </div>
       </div>
