--- a/angular/tpl/blocks/popover/confirmPopup.html
+++ b/angular/tpl/blocks/popover/confirmPopup.html
@@ -1,10 +1,10 @@
 <div class="custom-modal">
     <div class="custom-modal-title">
         <div class="row flex-center">
-            <div class="col-lg-10 col-md-10">
+            <div class="col-lg-10 col-md-10 col-xs-10">
                 <h3>{{confirmData.title}}</h3>
             </div>
-            <div class="col-lg-2 col-md-2 text-right">
+            <div class="col-lg-2 col-md-2 col-xs-2 text-right">
                 <a ng-click="closeModal()"><img src="../assets/img/close.png" /></a>
             </div>
         </div>
